2008-09-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes) src/plot2d.c (get_data)
	term/pdf.trm (PDF_image) src/wxterminal/gp_cairo.c (gp_cairo_draw_image)
	src/plot3d.c (get_3ddata) term/gd.trm (PNG_image) demo/imageNaN.dem:

	When converting image data to image pixels, missing/NaN/Inf data points
	were being mapped to 0.  Since 0 can often be a legitimate cbrange
	value, this was unfortunate.  Modify the input code to retain the
	actual missing/NaN/Inf value, and teach the generic image code to skip
	NaN data points. +Inf, -Inf values are now correctly pinned to the
	extremes of the colorbar palette.  The terminal-specific image routines
	handled by libgd, PDFlib, and cairo are similarly modified.

2008-09-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.h: Add field c into structure gpdPoint.

	* src/pm3d.c (pm3d_plot): Support "pm3d interpolate" for surfaces
	given by both z and colour coordinates.
	SF Bug #2127845

2008-09-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_label load_tic_users prune_dataticks)
	src/internal.c (f_strftime):  Fix memory leaks found by valgrind.
	Memcheck now gives all.dem a clean bill of health.

2008-09-23  Ethan Merritt  <merritt@u.washington.edu>

	* demo/html/Makefile demo/html/index.save:
	Add ellipse.dem to the set of auto-generated sample plots.

	* docs/gnuplot.doc src/gadgets.h src/graphics.c src/graphics.h
	src/hidden3d.c src/save.c src/set.c src/unset.c NEWS:
	New object type: polygon

2008-09-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics) src/graphics.c (label_width):  Add a sanity
	check for the number of auto-generated axis ticks.  Do not accept a
	request for more ticks than the resolution of the output device
	coordinate system (term->xmax). Skip label processing for empty labels.
	Bug #2117370

2008-09-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (clip_line): Make sure that the clipped line segment