@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: mouse.c,v 1.109 2008/08/15 00:45:34 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: mouse.c,v 1.110 2008/10/02 21:30:16 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - mouse.c */
@@ -75,6 +75,7 @@ static char *RCSid() { return RCSid("$Id: mouse.c,v 1.109 2008/08/15 00:45:34 sf
 #endif
 
 /********************** variables ***********************************************************/
+char mouse_fmt_default[] = "% #g";
 
 mouse_setting_t mouse_setting = {
 #ifdef OS2
@@ -84,7 +85,7 @@ mouse_setting_t mouse_setting = {
 #endif
     300 /* ms */,
     1, 0, 0, 0, 0,
-    "% #g",
+    mouse_fmt_default,
     NULL
 };
 
